--- a/src/ClientSide/GuideHome/GuideHome.module.css
+++ b/src/ClientSide/GuideHome/GuideHome.module.css
@@ -8,7 +8,7 @@
   --text-primary-dark: #f8f9fa;
   --text-secondary-light: #636e72;
   --text-secondary-dark: #ced4da;
-  --accent-color: #f59e0b;
+  --accent-color: #ff4757;
   --shadow-light: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
   --shadow-dark: 0 4px 6px -1px rgba(0, 0, 0, 0.3);
   --inset-shadow-light: inset 0 0 10px rgba(0, 0, 0, 0.1);
