--- a/src/app/admin/test-qrcode/testQR.module.css
+++ b/src/app/admin/test-qrcode/testQR.module.css
@@ -14,7 +14,7 @@
   --color-accent-secondary: #9b4e33; /* Caoba bourbon */
   --color-accent-tertiary: #604e88; /* Púrpura vino */
   --color-accent-primary-transparent: rgba(200, 162, 92, 0.08);
-  --color-success: #4caf50;
+  --color-success: #ff4757;
   --color-error: #f44336;
   
   /* Texto refinado */
