--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,7 +14,7 @@
   --black: #000000;
   
   /* Colores semánticos */
-  --success: #4caf50;
+  --success: #ff4757;
   --error: #f44336;
   --warning: #ff9800;
   --info: #2196f3;
