--- a/src/components/Nav/navBar.module.css
+++ b/src/components/Nav/navBar.module.css
@@ -1,8 +1,8 @@
 /* Variables para mantener consistencia */
 .header {
-  --primary-color: #8D4E31;
+  --primary-color: #ff4757;
   --primary-light: #A06A50;
-  --secondary-color: #F3A950;
+  --secondary-color: #ff4757;
   --text-light: #ffffff;
   --text-dark: #333333;
   --background-light: #ffffff;
