--- a/src/components/PropinasButton/PropinasButton.module.css
+++ b/src/components/PropinasButton/PropinasButton.module.css
@@ -5,7 +5,7 @@
   width: 3.5rem;
   height: 3.5rem;
   border-radius: 50%;
-  background-color: #d4af37;
+  background-color: #ff4757;
   border: none;
   cursor: pointer;
   display: flex;
